Kube.WebApp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-webapp
  labels:
    app: kube-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-webapp
  template:
    metadata:
      labels:
        app: kube-webapp
    spec:
      containers:
      - name: kube-webapp
        image: kube.webapp
        imagePullPolicy: Never
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
