Kube.WebApp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-webapp
  labels:
    name: kube-webapp
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-webapp
            port:
              number: 8082
